mm,page_owner: Display all stacks and their count (jsc-PED#7423).

--- a/series.conf
+++ b/series.conf
@@ -16935,6 +16935,7 @@
 	patches.suse/0002-lib-stackdepot-Move-stack_record-struct-definition-i.patch
 	patches.suse/0003-mm-page_owner-Maintain-own-list-of-stack_records-str.patch
 	patches.suse/0004-mm-page_owner-Implement-the-tracking-of-the-stacks-c.patch
+	patches.suse/0005-mm-page_owner-Display-all-stacks-and-their-count.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
