--- a/series.conf
+++ b/series.conf
@@ -15192,6 +15192,7 @@
 	patches.suse/connector-Fix-proc_event_num_listeners-count-not-cle.patch
 	patches.suse/selftests-bonding-do-not-set-port-down-when-adding-t.patch
 	patches.suse/sfc-fix-a-double-free-bug-in-efx_probe_filters.patch
+	patches.suse/net-bcmgenet-Fix-FCS-generation-for-fragmented-skbuf.patch
 	patches.suse/idpf-fix-corrupted-frames-and-skb-leaks-in-singleq-m.patch
 	patches.suse/idpf-avoid-compiler-introduced-padding-in-virtchnl2_.patch
 	patches.suse/ice-Fix-link_down_on_close-message.patch
