mm,page_owner: Filter out stacks by a threshold (jsc-PED#7423).

--- a/series.conf
+++ b/series.conf
@@ -16936,6 +16936,7 @@
 	patches.suse/0003-mm-page_owner-Maintain-own-list-of-stack_records-str.patch
 	patches.suse/0004-mm-page_owner-Implement-the-tracking-of-the-stacks-c.patch
 	patches.suse/0005-mm-page_owner-Display-all-stacks-and-their-count.patch
+	patches.suse/0006-mm-page_owner-Filter-out-stacks-by-a-threshold.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
