--- a/series.conf
+++ b/series.conf
@@ -16778,6 +16778,7 @@
 	patches.suse/driver-core-Fix-device_link_flag_is_sync_state_only.patch
 	patches.suse/driver-core-fw_devlink-Improve-detection-of-overlapp.patch
 	patches.suse/powerpc-pseries-papr-sysparm-use-u8-arrays-for-paylo.patch
+	patches.suse/powerpc-iommu-Fix-the-missing-iommu_group_put-during.patch
 	patches.suse/i2c-qcom-geni-Correct-I2C-TRE-sequence.patch
 	patches.suse/i2c-i801-Fix-block-process-call-transactions.patch
 	patches.suse/irqchip-irq-brcmstb-l2-Add-write-memory-barrier-befo.patch
