powerpc/lib: Validate size for vector operations (bsc#1215199).

--- a/series.conf
+++ b/series.conf
@@ -15250,6 +15250,7 @@
 	patches.suse/EDAC-mce_amd-Remove-SMCA-Extended-Error-code-descriptions.patch
 	patches.suse/x86-MCE-AMD-Add-new-MA_LLC-USR_DP-and-USR_CP-bank-types.patch
 	patches.suse/Documentation-Begin-a-RAS-section.patch
+	patches.suse/powerpc-lib-Validate-size-for-vector-operations.patch
 	patches.suse/powerpc-pseries-memhp-Fix-access-beyond-end-of-drmem.patch
 	patches.suse/powerpc-hv-gpci-Add-return-value-check-in-affinity_domain_via_partition_show-function.patch
 	patches.suse/powerpc-rtas-Avoid-warning-on-invalid-token-argument.patch
