powerpc/64s: Increase default stack size to 32KB (bsc#1215199).

--- a/series.conf
+++ b/series.conf
@@ -16520,6 +16520,7 @@
 	patches.suse/scsi-fnic-unlock-on-error-path-in-fnic_queuecommand.patch
 	patches.suse/dmaengine-fix-NULL-pointer-in-channel-unregistration.patch
 	patches.suse/dmaengine-idxd-Move-dma_free_coherent-out-of-spinloc.patch
+	patches.suse/powerpc-64s-Increase-default-stack-size-to-32KB.patch
 	patches.suse/clocksource-drivers-timer-ti-dm-Fix-make-W-n-kerneld.patch
 	patches.suse/tick-sched-Fix-idle-and-iowait-sleeptime-accounting-.patch
 	patches.suse/xen-netback-don-t-produce-zero-size-SKB-frags.patch
