--- a/series.conf
+++ b/series.conf
@@ -15266,6 +15266,7 @@
 	patches.suse/powerpc-pseries-papr-sysparm-Expose-character-device.patch
 	patches.suse/powerpc-selftests-Add-test-for-papr-vpd.patch
 	patches.suse/powerpc-selftests-Add-test-for-papr-sysparm.patch
+	patches.suse/powerpc-mm-Fix-null-pointer-dereference-in-pgtable_c.patch
 	patches.suse/powerpc-powernv-Add-a-null-pointer-check-to-scom_deb.patch
 	patches.suse/powerpc-powernv-Add-a-null-pointer-check-in-opal_eve.patch
 	patches.suse/powerpc-powernv-Add-a-null-pointer-check-in-opal_pow.patch
