net: ravb: Wait for operating mode to be applied (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15205,6 +15205,7 @@
 	patches.suse/octeontx2-af-Always-configure-NIX-TX-link-credits-ba.patch
 	patches.suse/octeontx2-af-Re-enable-MAC-TX-in-otx2_stop-processin.patch
 	patches.suse/asix-Add-check-for-usbnet_get_endpoints.patch
+	patches.suse/net-ravb-Wait-for-operating-mode-to-be-applied.patch
 	patches.suse/bnxt_en-Remove-mis-applied-code-from-bnxt_cfg_ntp_fi.patch
 	patches.suse/i40e-fix-use-after-free-in-i40e_aqc_add_filters.patch
 	patches.suse/i40e-Restore-VF-MSI-X-state-during-PCI-reset.patch
