--- a/series.conf
+++ b/series.conf
@@ -16844,6 +16844,9 @@
 	patches.suse/RAS-AMD-ATL-Add-MI300-DRAM-to-normalized-address-translati.patch
 	patches.suse/EDAC-amd64-Add-MI300-row-retirement-support.patch
 
+	# out-of-tree patches
+	patches.suse/block-sed-opal-handle-empty-atoms-when-parsing-respo.patch
+
 	########################################################
 	# end of sorted patches
 	########################################################
