--- a/series.conf
+++ b/series.conf
@@ -16700,6 +16700,7 @@
 	patches.suse/usb-ulpi-Fix-debugfs-directory-leak.patch
 	patches.suse/usb-ucsi-Add-missing-ppm_lock.patch
 	patches.suse/usb-ucsi_acpi-Fix-command-completion-handling.patch
+	patches.suse/usb-ucsi_acpi-Quirk-to-ack-a-connector-change-ack-cm.patch
 	patches.suse/usb-typec-tcpm-fix-the-PD-disabled-case.patch
 	patches.suse/USB-serial-cp210x-add-ID-for-IMST-iM871A-USB.patch
 	patches.suse/USB-serial-qcserial-add-new-usb-id-for-Dell-Wireless.patch
