leds: Change led_trigger_blink[_oneshot]() delay parameters to pass-by-value (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -4826,6 +4826,7 @@
 	patches.suse/mfd-stmfx-Nullify-stmfx-vdd-in-case-of-error.patch
 	patches.suse/mfd-stmpe-Only-disable-the-regulators-if-they-a.patch
 	patches.suse/dt-bindings-leds-Drop-redundant-cpus-enum-match.patch
+	patches.suse/leds-Change-led_trigger_blink-_oneshot-delay-paramet.patch
 	patches.suse/led-qcom-lpg-Fix-resource-leaks-in-for_each_av.patch
 	patches.suse/1588-backlight-lm3630a-Turn-off-both-led-strings-when-dis.patch
 	patches.suse/1589-backlight-Switch-i2c-drivers-back-to-use-.probe.patch
