--- a/series.conf
+++ b/series.conf
@@ -16781,6 +16781,7 @@
 	patches.suse/driver-core-Fix-device_link_flag_is_sync_state_only.patch
 	patches.suse/driver-core-fw_devlink-Improve-detection-of-overlapp.patch
 	patches.suse/powerpc-pseries-papr-sysparm-use-u8-arrays-for-paylo.patch
+	patches.suse/powerpc-kasan-Limit-KASAN-thread-size-increase-to-32.patch
 	patches.suse/powerpc-iommu-Fix-the-missing-iommu_group_put-during.patch
 	patches.suse/i2c-qcom-geni-Correct-I2C-TRE-sequence.patch
 	patches.suse/i2c-i801-Fix-block-process-call-transactions.patch
