iio: magnetometer: rm3100: add boundary check for the value read from RM3100_REG_TMRC (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45171,6 +45171,7 @@
 	patches.suse/ASoC-SOF-IPC3-fix-message-bounds-on-ipc-ops.patch
 	patches.suse/ALSA-usb-audio-More-relaxed-check-of-MIDI-jack-names.patch
 	patches.suse/iio-core-fix-memleak-in-iio_device_register_sysfs.patch
+	patches.suse/iio-magnetometer-rm3100-add-boundary-check-for-the-v.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
