--- a/series.conf
+++ b/series.conf
@@ -45170,6 +45170,7 @@
 	patches.suse/ASoC-rt5645-Fix-deadlock-in-rt5645_jack_detect_work.patch
 	patches.suse/ASoC-SOF-IPC3-fix-message-bounds-on-ipc-ops.patch
 	patches.suse/ALSA-usb-audio-More-relaxed-check-of-MIDI-jack-names.patch
+	patches.suse/iio-core-fix-memleak-in-iio_device_register_sysfs.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
