--- a/series.conf
+++ b/series.conf
@@ -45178,6 +45178,7 @@
 	patches.suse/irqchip-irq-brcmstb-l2-Add-write-memory-barrier-befo.patch
 	patches.suse/irqchip-gic-v3-its-Fix-GICv4.1-VPE-affinity-update.patch
 	patches.suse/kbuild-Fix-changing-ELF-file-type-for-output-of-gen_.patch
+	patches.suse/modpost-trim-leading-spaces-when-processing-source-f.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
