irqchip/gic-v3-its: Fix GICv4.1 VPE affinity update (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45176,6 +45176,7 @@
 	patches.suse/iio-accel-bma400-Fix-a-compilation-problem.patch
 	patches.suse/driver-core-Fix-device_link_flag_is_sync_state_only.patch
 	patches.suse/irqchip-irq-brcmstb-l2-Add-write-memory-barrier-befo.patch
+	patches.suse/irqchip-gic-v3-its-Fix-GICv4.1-VPE-affinity-update.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
