iio: accel: bma400: Fix a compilation problem (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45173,6 +45173,7 @@
 	patches.suse/iio-core-fix-memleak-in-iio_device_register_sysfs.patch
 	patches.suse/iio-magnetometer-rm3100-add-boundary-check-for-the-v.patch
 	patches.suse/staging-iio-ad5933-fix-type-mismatch-regression.patch
+	patches.suse/iio-accel-bma400-Fix-a-compilation-problem.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
