staging: iio: ad5933: fix type mismatch regression (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45172,6 +45172,7 @@
 	patches.suse/ALSA-usb-audio-More-relaxed-check-of-MIDI-jack-names.patch
 	patches.suse/iio-core-fix-memleak-in-iio_device_register_sysfs.patch
 	patches.suse/iio-magnetometer-rm3100-add-boundary-check-for-the-v.patch
+	patches.suse/staging-iio-ad5933-fix-type-mismatch-regression.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
