--- a/series.conf
+++ b/series.conf
@@ -45174,6 +45174,7 @@
 	patches.suse/iio-magnetometer-rm3100-add-boundary-check-for-the-v.patch
 	patches.suse/staging-iio-ad5933-fix-type-mismatch-regression.patch
 	patches.suse/iio-accel-bma400-Fix-a-compilation-problem.patch
+	patches.suse/driver-core-Fix-device_link_flag_is_sync_state_only.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
