irqchip/irq-brcmstb-l2: Add write memory barrier before exit (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45175,6 +45175,7 @@
 	patches.suse/staging-iio-ad5933-fix-type-mismatch-regression.patch
 	patches.suse/iio-accel-bma400-Fix-a-compilation-problem.patch
 	patches.suse/driver-core-Fix-device_link_flag_is_sync_state_only.patch
+	patches.suse/irqchip-irq-brcmstb-l2-Add-write-memory-barrier-befo.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
