blacklist: Add more files for unsupported powerpc architectures

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -110,18 +110,25 @@ arch/powerpc/platforms/pasemi
 arch/powerpc/platforms/powermac
 arch/powerpc/platforms/ps3
 arch/powerpc/platforms/fsl_uli1575.c
-arch/powerpc/kernel/cpu_setup_44x.S
+arch/powerpc/kernel/cpu_specs_40x.h
 arch/powerpc/kernel/head_40x.S
+arch/powerpc/kernel/cpu_setup_44x.S
+arch/powerpc/kernel/cpu_specs_44x.h
 arch/powerpc/kernel/head_44x.S
+arch/powerpc/kernel/cpu_specs_47x.h
 arch/powerpc/kernel/cpu_setup_6xx.S
 arch/powerpc/kernel/idle_6xx.S
 arch/powerpc/kernel/l2cr_6xx.S
 arch/powerpc/kernel/tau_6xx.c
+arch/powerpc/kernel/cpu_specs_8xx.h
 arch/powerpc/kernel/head_8xx.S
+arch/powerpc/kernel/cpu_specs_85xx.h
+arch/powerpc/kernel/cpu_specs_e500mc.h
 arch/powerpc/kernel/idle_e500.S
 arch/powerpc/kernel/cpu_setup_ppc970.S
 arch/powerpc/kernel/cpu_setup_fsl_booke.S
 arch/powerpc/kernel/fsl_booke_entry_mapping.S
+arch/powerpc/kernel/cpu_specs_book3s_32.h
 arch/powerpc/kernel/head_book3s_32.S
 arch/powerpc/kernel/head_booke.h
 arch/powerpc/kernel/head_fsl_booke.S
