powerpc/watchpoints: Disable preemption in thread_change_pc() (bsc#1194869).

--- a/series.conf
+++ b/series.conf
@@ -11419,6 +11419,7 @@
 	patches.suse/ASoC-SOF-core-Only-call-sof_ops_free-on-remove-if-th.patch
 	patches.suse/memblock-tests-fix-compilation-errors.patch
 	patches.suse/powerpc-perf-hv-24x7-Update-domain-value-check.patch
+	patches.suse/powerpc-watchpoints-Disable-preemption-in-thread_cha.patch
 	patches.suse/powerpc-dexcr-Move-HASHCHK-trap-handler.patch
 	patches.suse/net-microchip-sparx5-Fix-memory-leak-for-vcap_api_ru.patch
 	patches.suse/net-microchip-sparx5-Fix-memory-leak-for-vcap_api_ru2.patch
