--- a/series.conf
+++ b/series.conf
@@ -43502,6 +43502,7 @@
 	patches.suse/powerpc-fadump-reset-dump-area-size-if-fadump-memory.patch
 	patches.suse/powerpc-Move-DMA64_PROPNAME-define-to-a-header.patch
 	patches.suse/powerpc-powernv-Fix-fortify-source-warnings-in-opal-.patch
+	patches.suse/powerpc-Don-t-include-lppaca.h-in-paca.h.patch
 	patches.suse/powerpc-iommu-Fix-notifiers-being-shared-by-PCI-and-.patch
 	patches.suse/ext4-avoid-potential-data-overflow-in-next_linear_gr.patch
 	patches.suse/jbd2-fix-checkpoint-cleanup-performance-regression.patch
