--- a/series.conf
+++ b/series.conf
@@ -43866,6 +43866,7 @@
 	patches.suse/powerpc-perf-hv-24x7-Update-domain-value-check.patch
 	patches.suse/powerpc-watchpoints-Disable-preemption-in-thread_cha.patch
 	patches.suse/powerpc-watchpoint-Disable-pagefaults-when-getting-u.patch
+	patches.suse/powerpc-watchpoints-Annotate-atomic-context-in-more-.patch
 	patches.suse/bpf-Add-override-check-to-kprobe-multi-link-attach.patch
 	patches.suse/igc-Fix-infinite-initialization-loop-with-early-XDP-.patch
 	patches.suse/ipv4-fix-null-deref-in-ipv4_link_failure.patch
