--- a/series.conf
+++ b/series.conf
@@ -11421,6 +11421,7 @@
 	patches.suse/powerpc-perf-hv-24x7-Update-domain-value-check.patch
 	patches.suse/powerpc-watchpoints-Disable-preemption-in-thread_cha.patch
 	patches.suse/powerpc-watchpoint-Disable-pagefaults-when-getting-u.patch
+	patches.suse/powerpc-watchpoints-Annotate-atomic-context-in-more-.patch
 	patches.suse/powerpc-dexcr-Move-HASHCHK-trap-handler.patch
 	patches.suse/net-microchip-sparx5-Fix-memory-leak-for-vcap_api_ru.patch
 	patches.suse/net-microchip-sparx5-Fix-memory-leak-for-vcap_api_ru2.patch
