powerpc/64: Set task pt_regs->link to the LR value on scv entry (bsc#1194869).

--- a/series.conf
+++ b/series.conf
@@ -16788,6 +16788,7 @@
 	patches.suse/driver-core-Fix-device_link_flag_is_sync_state_only.patch
 	patches.suse/driver-core-fw_devlink-Improve-detection-of-overlapp.patch
 	patches.suse/powerpc-pseries-papr-sysparm-use-u8-arrays-for-paylo.patch
+	patches.suse/powerpc-64-Set-task-pt_regs-link-to-the-LR-value-on-.patch
 	patches.suse/powerpc-kasan-Limit-KASAN-thread-size-increase-to-32.patch
 	patches.suse/powerpc-pseries-fix-accuracy-of-stolen-time.patch
 	patches.suse/powerpc-iommu-Fix-the-missing-iommu_group_put-during.patch
