--- a/series.conf
+++ b/series.conf
@@ -10086,6 +10086,7 @@
 	patches.suse/powerpc-rtas-export-rtas_error_rc-for-reuse.patch
 	patches.suse/powerpc-perf-Convert-fsl_emb-notifier-to-state-machine-callbacks.patch
 	patches.suse/powerpc-ftrace-Fix-dropping-weak-symbols-with-older-toolchains.patch
+	patches.suse/powerpc-powernv-Fix-fortify-source-warnings-in-opal-.patch
 	patches.suse/powerpc-iommu-Fix-notifiers-being-shared-by-PCI-and-.patch
 	patches.suse/ARM-9318-1-locomo-move-kernel-doc-to-prevent-warning.patch
 	patches.suse/fs-dlm-debugfs-for-queued-callbacks.patch
