--- a/series.conf
+++ b/series.conf
@@ -44840,6 +44840,7 @@
 	patches.suse/EDAC-mce_amd-Remove-SMCA-Extended-Error-code-descriptions.patch
 	patches.suse/x86-MCE-AMD-Add-new-MA_LLC-USR_DP-and-USR_CP-bank-types.patch
 	patches.suse/Documentation-Begin-a-RAS-section.patch
+	patches.suse/powerpc-add-crtsavres.o-to-always-y-instead-of-extra.patch
 	patches.suse/powerpc-pseries-memhp-Fix-access-beyond-end-of-drmem.patch
 	patches.suse/powerpc-powernv-Add-a-null-pointer-check-to-scom_deb.patch
 	patches.suse/powerpc-powernv-Add-a-null-pointer-check-in-opal_eve.patch
