--- a/series.conf
+++ b/series.conf
@@ -10088,6 +10088,7 @@
 	patches.suse/powerpc-ftrace-Fix-dropping-weak-symbols-with-older-toolchains.patch
 	patches.suse/powerpc-powernv-Fix-fortify-source-warnings-in-opal-.patch
 	patches.suse/powerpc-Don-t-include-lppaca.h-in-paca.h.patch
+	patches.suse/powerpc-pseries-Rework-lppaca_shared_proc-to-avoid-D.patch
 	patches.suse/powerpc-iommu-Fix-notifiers-being-shared-by-PCI-and-.patch
 	patches.suse/ARM-9318-1-locomo-move-kernel-doc-to-prevent-warning.patch
 	patches.suse/fs-dlm-debugfs-for-queued-callbacks.patch
