powerpc/watchpoint: Disable pagefaults when getting user instruction (bsc#1194869).

--- a/series.conf
+++ b/series.conf
@@ -43865,6 +43865,7 @@
 	patches.suse/ASoC-SOF-core-Only-call-sof_ops_free-on-remove-if-th.patch
 	patches.suse/powerpc-perf-hv-24x7-Update-domain-value-check.patch
 	patches.suse/powerpc-watchpoints-Disable-preemption-in-thread_cha.patch
+	patches.suse/powerpc-watchpoint-Disable-pagefaults-when-getting-u.patch
 	patches.suse/bpf-Add-override-check-to-kprobe-multi-link-attach.patch
 	patches.suse/igc-Fix-infinite-initialization-loop-with-early-XDP-.patch
 	patches.suse/ipv4-fix-null-deref-in-ipv4_link_failure.patch
