--- a/series.conf
+++ b/series.conf
@@ -45143,6 +45143,7 @@
 	patches.suse/serial-max310x-improve-crystal-stable-clock-detectio.patch
 	patches.suse/serial-max310x-fail-probe-if-clock-crystal-is-unstab.patch
 	patches.suse/misc-fastrpc-Mark-all-sessions-as-invalid-in-cb_remo.patch
+	patches.suse/scsi-core-Move-scsi_host_busy-out-of-host-lock-if-it-is-for-per-command.patch
 	patches.suse/scsi-Revert-scsi-fcoe-Fix-potential-deadlock-on-fip-ctlr_lock.patch
 	patches.suse/scsi-fnic-Move-fnic_fnic_flush_tx-to-a-work-queue.patch
 
