swiotlb-xen: provide the "max_mapping_size" method (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14510,6 +14510,7 @@
 	patches.suse/ACPI-video-Use-acpi_device_fix_up_power_children.patch
 	patches.suse/s390-ipl-add-missing-IPL_TYPE_ECKD_DUMP-case-to-ipl_init.patch
 	patches.suse/scripts-checkstack.pl-match-all-stack-sizes-for-s390.patch
+	patches.suse/swiotlb-xen-provide-the-max_mapping_size-method.patch
 	patches.suse/arm-xen-fix-xen_vcpu_info-allocation-alignment.patch
 	patches.suse/arm64-mm-Fix-rodata-on-when-CONFIG_RODATA_FULL_DEFAU.patch
 	patches.suse/kselftest-arm64-Fix-output-formatting-for-za-fork.patch
