Documentation: arm64: Correct SME ZA macros name (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7122,6 +7122,7 @@
 	patches.suse/s390-vfio-ap-make-sure-nib-is-shared.patch
 	patches.suse/arm64-add-HWCAP-for-FEAT_HBC-hinted-conditional-branches.patch
 	patches.suse/arm64-fpsimd-Only-provide-the-length-to-cpufeature-f.patch
+	patches.suse/Documentation-arm64-Correct-SME-ZA-macros-name.patch
 	patches.suse/arm64-ptrace-Clean-up-error-handling-path-in-sve_set.patch
 	patches.suse/arm64-vdso-remove-two-.altinstructions-related-symbo.patch
 	patches.suse/arm64-sdei-abort-running-SDEI-handlers-during-crash.patch
