xen/gntdev: Fix the abuse of underlying struct page in DMA-buf import (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16249,6 +16249,7 @@
 	patches.suse/KVM-x86-mmu-always-take-tdp_mmu_pages_lock.patch
 	patches.suse/KVM-x86-mmu-fix-comment-about-mmu_unsync_pages_lock.patch
 	patches.suse/x86-kvm-Do-not-try-to-disable-kvmclock-if-it-was-not-enabl.patch
+	patches.suse/xen-gntdev-Fix-the-abuse-of-underlying-struct-page-i.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
 	patches.suse/mfd-intel-lpss-Revert-Add-missing-check-for-platform.patch
