--- a/series.conf
+++ b/series.conf
@@ -11624,6 +11624,7 @@
 	patches.suse/perf-x86-amd-core-Fix-overflow-reset-on-hotplug.patch
 	patches.suse/perf-x86-amd-Do-not-WARN-on-every-IRQ.patch
 	patches.suse/sched-rt-Fix-live-lock-between-select_fallback_rq-and-RT-push.patch
+	patches.suse/timers-Tag-hr-timer-softirq-as-hotplug-safe.patch
 	patches.suse/serial-8250_port-Check-IRQ-data-before-use.patch
 	patches.suse/Revert-tty-n_gsm-fix-UAF-in-gsm_cleanup_mux.patch
 	patches.suse/misc-rtsx-Fix-some-platforms-can-not-boot-and-move-t.patch
