--- a/series.conf
+++ b/series.conf
@@ -16620,6 +16620,7 @@
 	patches.suse/e1000e-correct-maximum-frequency-adjustment-values.patch
 	patches.suse/ixgbe-Fix-an-error-handling-path-in-ixgbe_read_iosf_.patch
 	patches.suse/octeontx2-pf-Remove-xdp-queues-on-program-detach.patch
+	patches.suse/xen-netback-properly-sync-TX-responses.patch
 	patches.suse/msft-hv-2940-hv_netvsc-Fix-race-condition-between-netvsc_probe-an.patch
 	patches.suse/idpf-avoid-compiler-padding-in-virtchnl2_ptype-struc.patch
 	patches.suse/nvme-rdma-Fix-transfer-length-when-write_generate-re.patch
