--- a/series.conf
+++ b/series.conf
@@ -14246,6 +14246,7 @@
 	patches.suse/zstd-Fix-array-index-out-of-bounds-UBSAN-warning.patch
 	patches.suse/vhost-vdpa-fix-use-after-free-in-vhost_vdpa_probe.patch
 	patches.suse/xen-events-avoid-using-info_for_irq-in-xen_send_IPI_.patch
+	patches.suse/acpi-processor-sanitize-_OSC-_PDC-capabilities-for-X.patch
 	patches.suse/xen-events-fix-delayed-eoi-list-handling.patch
 	patches.suse/ipvlan-add-ipvlan_route_v6_outbound-helper.patch
 	patches.suse/tty-Fix-uninit-value-access-in-ppp_sync_receive.patch
