x86/xen: fix percpu vcpu_info allocation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14670,6 +14670,7 @@
 	patches.suse/powercap-DTPM-Fix-unneeded-conversions-to-micro-Watt.patch
 	patches.suse/kprobes-consistent-rcu-api-usage-for-kretprobe-holder.patch
 	patches.suse/rethook-Use-__rcu-pointer-for-rethook-handler.patch
+	patches.suse/x86-xen-fix-percpu-vcpu_info-allocation.patch
 	patches.suse/vfio-pds-Fix-mutex-lock-magic-lock-warning
 	patches.suse/vfio-pds-Fix-possible-sleep-while-in-atomic-context
 	patches.suse/vfio-Drop-vfio_file_iommu_group-stub-to-fudge-around-a-KVM-wart
