--- a/series.conf
+++ b/series.conf
@@ -16746,6 +16746,7 @@
 	patches.suse/nvme-host-fix-the-updating-of-the-firmware-version.patch
 	patches.suse/x86-Kconfig-Transmeta-Crusoe-is-CPU-family-5-not-6.patch
 	patches.suse/net-mlx5-DPLL-Fix-possible-use-after-free-after-dela.patch
+	patches.suse/bonding-do-not-report-NETDEV_XDP_ACT_XSK_ZEROCOPY.patch
 	patches.suse/ALSA-hda-conexant-Add-quirk-for-SWS-JS201D.patch
 	patches.suse/ALSA-hda-realtek-add-IDs-for-Dell-dual-spk-platform.patch
 	patches.suse/ALSA-hda-cs35l56-select-intended-config-FW_CS_DSP.patch
