--- a/series.conf
+++ b/series.conf
@@ -16748,6 +16748,7 @@
 	patches.suse/net-mlx5-DPLL-Fix-possible-use-after-free-after-dela.patch
 	patches.suse/bonding-do-not-report-NETDEV_XDP_ACT_XSK_ZEROCOPY.patch
 	patches.suse/lan966x-Fix-crash-when-adding-interface-under-a-lag.patch
+	patches.suse/i40e-Do-not-allow-untrusted-VF-to-remove-administrat.patch
 	patches.suse/ALSA-hda-conexant-Add-quirk-for-SWS-JS201D.patch
 	patches.suse/ALSA-hda-realtek-add-IDs-for-Dell-dual-spk-platform.patch
 	patches.suse/ALSA-hda-cs35l56-select-intended-config-FW_CS_DSP.patch
