octeontx2-af: Remove the PF_FUNC validation for NPC transmit rules (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16750,6 +16750,7 @@
 	patches.suse/lan966x-Fix-crash-when-adding-interface-under-a-lag.patch
 	patches.suse/i40e-Do-not-allow-untrusted-VF-to-remove-administrat.patch
 	patches.suse/ionic-minimal-work-with-0-budget.patch
+	patches.suse/octeontx2-af-Remove-the-PF_FUNC-validation-for-NPC-t.patch
 	patches.suse/ALSA-hda-conexant-Add-quirk-for-SWS-JS201D.patch
 	patches.suse/ALSA-hda-realtek-add-IDs-for-Dell-dual-spk-platform.patch
 	patches.suse/ALSA-hda-cs35l56-select-intended-config-FW_CS_DSP.patch
