--- a/series.conf
+++ b/series.conf
@@ -16751,6 +16751,7 @@
 	patches.suse/i40e-Do-not-allow-untrusted-VF-to-remove-administrat.patch
 	patches.suse/ionic-minimal-work-with-0-budget.patch
 	patches.suse/octeontx2-af-Remove-the-PF_FUNC-validation-for-NPC-t.patch
+	patches.suse/i40e-Fix-waiting-for-queues-of-all-VSIs-to-be-disabl.patch
 	patches.suse/ALSA-hda-conexant-Add-quirk-for-SWS-JS201D.patch
 	patches.suse/ALSA-hda-realtek-add-IDs-for-Dell-dual-spk-platform.patch
 	patches.suse/ALSA-hda-cs35l56-select-intended-config-FW_CS_DSP.patch
