i40e: avoid double calling i40e_pf_rxq_wait() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16753,6 +16753,7 @@
 	patches.suse/octeontx2-af-Remove-the-PF_FUNC-validation-for-NPC-t.patch
 	patches.suse/i40e-Fix-waiting-for-queues-of-all-VSIs-to-be-disabl.patch
 	patches.suse/i40e-Fix-wrong-mask-used-during-DCB-config.patch
+	patches.suse/i40e-avoid-double-calling-i40e_pf_rxq_wait.patch
 	patches.suse/ALSA-hda-conexant-Add-quirk-for-SWS-JS201D.patch
 	patches.suse/ALSA-hda-realtek-add-IDs-for-Dell-dual-spk-platform.patch
 	patches.suse/ALSA-hda-cs35l56-select-intended-config-FW_CS_DSP.patch
