bnad: fix work_queue type mismatch (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16755,6 +16755,7 @@
 	patches.suse/i40e-Fix-wrong-mask-used-during-DCB-config.patch
 	patches.suse/i40e-avoid-double-calling-i40e_pf_rxq_wait.patch
 	patches.suse/i40e-take-into-account-XDP-Tx-queues-when-stopping-r.patch
+	patches.suse/bnad-fix-work_queue-type-mismatch.patch
 	patches.suse/ALSA-hda-conexant-Add-quirk-for-SWS-JS201D.patch
 	patches.suse/ALSA-hda-realtek-add-IDs-for-Dell-dual-spk-platform.patch
 	patches.suse/ALSA-hda-cs35l56-select-intended-config-FW_CS_DSP.patch
