net: ravb: Count packets instead of descriptors in GbEth RX path (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16758,6 +16758,7 @@
 	patches.suse/bnad-fix-work_queue-type-mismatch.patch
 	patches.suse/ice-Add-check-for-lport-extraction-to-LAG-init.patch
 	patches.suse/pppoe-Fix-memory-leak-in-pppoe_sendmsg.patch
+	patches.suse/net-ravb-Count-packets-instead-of-descriptors-in-GbE.patch
 	patches.suse/ALSA-hda-conexant-Add-quirk-for-SWS-JS201D.patch
 	patches.suse/ALSA-hda-realtek-add-IDs-for-Dell-dual-spk-platform.patch
 	patches.suse/ALSA-hda-cs35l56-select-intended-config-FW_CS_DSP.patch
