virtio_balloon: Fix endless deflation and inflation on arm64 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12127,6 +12127,7 @@
 	patches.suse/phy-qcom-qmp-combo-initialize-PCS_USB-registers.patch
 	patches.suse/virtio-mmio-fix-memory-leak-of-vm_dev.patch
 	patches.suse/vdpa-mlx5-Fix-double-release-of-debugfs-entry.patch
+	patches.suse/virtio_balloon-Fix-endless-deflation-and-inflation-o.patch
 	patches.suse/vdpa-mlx5-Fix-firmware-error-on-creation-of-1k-VQs.patch
 	patches.suse/vhost-Allow-null-msg.size-on-VHOST_IOTLB_INVALIDATE.patch
 	patches.suse/virtio_pci-fix-the-common-cfg-map-size.patch
