--- a/series.conf
+++ b/series.conf
@@ -16759,6 +16759,7 @@
 	patches.suse/ice-Add-check-for-lport-extraction-to-LAG-init.patch
 	patches.suse/pppoe-Fix-memory-leak-in-pppoe_sendmsg.patch
 	patches.suse/net-ravb-Count-packets-instead-of-descriptors-in-GbE.patch
+	patches.suse/igb-Fix-string-truncation-warnings-in-igb_set_fw_ver.patch
 	patches.suse/ALSA-hda-conexant-Add-quirk-for-SWS-JS201D.patch
 	patches.suse/ALSA-hda-realtek-add-IDs-for-Dell-dual-spk-platform.patch
 	patches.suse/ALSA-hda-cs35l56-select-intended-config-FW_CS_DSP.patch
