powerpc/pseries/iommu: DLPAR add doesn't completely initialize pci_controller (bsc#1215199).

--- a/series.conf
+++ b/series.conf
@@ -16790,6 +16790,9 @@
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
 
+	# powerpc/linux fixes
+	patches.suse/powerpc-pseries-iommu-DLPAR-add-doesn-t-completely-i.patch
+
 	# powerpc/linux next
 	patches.suse/powerpc-smp-Adjust-nr_cpu_ids-to-cover-all-threads-o.patch
 	patches.suse/powerpc-smp-Increase-nr_cpu_ids-to-include-the-boot-.patch
