virtio_blk: fix snprintf truncation compiler warning (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15150,6 +15150,7 @@
 	patches.suse/scsi-core-Always-send-batch-on-reset-or-error-handling-command.patch
 	patches.suse/x86-alternatives-Sync-core-before-enabling-interrupts.patch
 	patches.suse/x86-alternatives-disable-interrupts-and-sync-when-optimizing-nops-in-place.patch
+	patches.suse/virtio_blk-fix-snprintf-truncation-compiler-warning.patch
 	patches.suse/kexec-fix-KEXEC_FILE-dependencies.patch
 	patches.suse/selftests-secretmem-floor-the-memory-size-to-the-mul.patch
 	patches.suse/linux-export-Ensure-natural-alignment-of-kcrctab-arr.patch
