virtio_blk: remove the broken zone revalidation support (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15837,6 +15837,7 @@
 	patches.suse/bus-moxtet-Add-spi-device-table.patch
 	patches.suse/ARM-davinci-always-select-CONFIG_CPU_ARM926T.patch
 	patches.suse/dma-mapping-clear-dev-dma_mem-to-NULL-after-freeing-.patch
+	patches.suse/virtio_blk-remove-the-broken-zone-revalidation-suppo.patch
 	patches.suse/block-reject-invalid-operation-in-submit_bio_noacct.patch
 	patches.suse/blk-wbt-remove-the-separate-write-cache-tracking.patch
 	patches.suse/blk-cgroup-fix-rcu-lockdep-warning-in-blkg_lookup.patch
