--- a/series.conf
+++ b/series.conf
@@ -16257,6 +16257,7 @@
 	patches.suse/x86-kvm-Do-not-try-to-disable-kvmclock-if-it-was-not-enabl.patch
 	patches.suse/xen-gntdev-Fix-the-abuse-of-underlying-struct-page-i.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
+	patches.suse/rpmsg-virtio-Free-driver_override-when-rpmsg_remove.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
 	patches.suse/mfd-intel-lpss-Revert-Add-missing-check-for-platform.patch
 	patches.suse/mfd-syscon-Fix-null-pointer-dereference-in-of_syscon.patch
