lib/stackdepot: add depot_fetch_stack helper (jsc-PED#7423).

--- a/series.conf
+++ b/series.conf
@@ -15320,6 +15320,7 @@
 	patches.suse/perf-x86-intel-uncore-Fix-NULL-pointer-dereference-issue-in-upi_fill_topology.patch
 	patches.suse/perf-x86-intel-uncore-Factor-out-topology_gidnid_map.patch
 	patches.suse/dax-kmem-allow-kmem-to-add-memory-with-memmap_on_mem-4eca.patch
+	patches.suse/0001-lib-stackdepot-add-depot_fetch_stack-helper.patch
 	patches.suse/mm-page_alloc-correct-high-atomic-reserve-calculations.patch
 	patches.suse/mm-page_alloc-enforce-minimum-zone-size-to-do-high-atomic-reserves.patch
 	patches.suse/mm-page_alloc-unreserve-highatomic-page-blocks-before-oom.patch
