virtio_net: Fix "%d directive writing between 1 and 11 bytes into a  region of size 10" warnings (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16432,6 +16432,7 @@
 	patches.suse/i2c-s3c24xx-fix-transferring-more-than-one-message-i.patch
 	patches.suse/i2c-rk3x-Adjust-mask-value-offset-for-i2c2-on-rv1126.patch
 	patches.suse/octeontx2-af-CN10KB-Fix-FIFO-length-calculation-for-.patch
+	patches.suse/virtio_net-Fix-d-directive-writing-between-1-and-11-.patch
 	patches.suse/net-phy-micrel-populate-.soft_reset-for-KSZ9131.patch
 	patches.suse/selftests-bonding-Change-script-interpreter.patch
 	patches.suse/selftests-netdevsim-sprinkle-more-udevadm-settle.patch
