KVM: x86: make KVM_REQ_NMI request iff NMI pending for vcpu (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16773,6 +16773,7 @@
 	patches.suse/ASoC-SOF-IPC3-fix-message-bounds-on-ipc-ops.patch
 	patches.suse/ALSA-hda-realtek-fix-mute-micmute-LED-For-HP-mt645.patch
 	patches.suse/ALSA-usb-audio-More-relaxed-check-of-MIDI-jack-names.patch
+	patches.suse/KVM-x86-make-KVM_REQ_NMI-request-iff-NMI-pending-for.patch
 	patches.suse/media-Revert-media-rkisp1-Drop-IRQF_SHARED.patch
 	patches.suse/media-ir_toy-fix-a-memleak-in-irtoy_tx.patch
 	patches.suse/thunderbolt-Fix-setting-the-CNS-bit-in-ROUTER_CS_5.patch
