KVM: x86/pmu: Fix type length error when reading pmu->fixed_ctr_ctrl (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16774,6 +16774,7 @@
 	patches.suse/ALSA-hda-realtek-fix-mute-micmute-LED-For-HP-mt645.patch
 	patches.suse/ALSA-usb-audio-More-relaxed-check-of-MIDI-jack-names.patch
 	patches.suse/KVM-x86-make-KVM_REQ_NMI-request-iff-NMI-pending-for.patch
+	patches.suse/KVM-x86-pmu-Fix-type-length-error-when-reading-pmu-f.patch
 	patches.suse/media-Revert-media-rkisp1-Drop-IRQF_SHARED.patch
 	patches.suse/media-ir_toy-fix-a-memleak-in-irtoy_tx.patch
 	patches.suse/thunderbolt-Fix-setting-the-CNS-bit-in-ROUTER_CS_5.patch
