btrfs: free qgroup reserve when ORDERED_IOERR is set (bsc#1216196).

--- a/series.conf
+++ b/series.conf
@@ -14872,6 +14872,7 @@
 	patches.suse/HID-lenovo-Restrict-detection-of-patched-firmware-on.patch
 	patches.suse/efi-x86-Avoid-physical-KASLR-on-older-Dell-systems.patch
 	patches.suse/sign-file-Fix-incorrect-return-values-check.patch
+	patches.suse/0001-btrfs-free-qgroup-reserve-when-ORDERED_IOERR-is-set.patch
 	patches.suse/net-mlx5e-Honor-user-choice-of-IPsec-replay-window-s.patch
 	patches.suse/net-mlx5e-Ensure-that-IPsec-sequence-packet-number-s.patch
 	patches.suse/net-mlx5e-Unify-esw-and-normal-IPsec-status-table-cr.patch
