--- a/series.conf
+++ b/series.conf
@@ -14873,6 +14873,7 @@
 	patches.suse/efi-x86-Avoid-physical-KASLR-on-older-Dell-systems.patch
 	patches.suse/sign-file-Fix-incorrect-return-values-check.patch
 	patches.suse/0001-btrfs-free-qgroup-reserve-when-ORDERED_IOERR-is-set.patch
+	patches.suse/0002-btrfs-fix-qgroup_free_reserved_data-int-overflow.patch
 	patches.suse/net-mlx5e-Honor-user-choice-of-IPsec-replay-window-s.patch
 	patches.suse/net-mlx5e-Ensure-that-IPsec-sequence-packet-number-s.patch
 	patches.suse/net-mlx5e-Unify-esw-and-normal-IPsec-status-table-cr.patch
