--- a/series.conf
+++ b/series.conf
@@ -14874,6 +14874,7 @@
 	patches.suse/sign-file-Fix-incorrect-return-values-check.patch
 	patches.suse/0001-btrfs-free-qgroup-reserve-when-ORDERED_IOERR-is-set.patch
 	patches.suse/0002-btrfs-fix-qgroup_free_reserved_data-int-overflow.patch
+	patches.suse/0003-btrfs-free-qgroup-pertrans-reserve-on-transaction-ab.patch
 	patches.suse/net-mlx5e-Honor-user-choice-of-IPsec-replay-window-s.patch
 	patches.suse/net-mlx5e-Ensure-that-IPsec-sequence-packet-number-s.patch
 	patches.suse/net-mlx5e-Unify-esw-and-normal-IPsec-status-table-cr.patch
