--- a/series.conf
+++ b/series.conf
@@ -45139,6 +45139,7 @@
 	patches.suse/serial-max310x-improve-crystal-stable-clock-detectio.patch
 	patches.suse/serial-max310x-fail-probe-if-clock-crystal-is-unstab.patch
 	patches.suse/misc-fastrpc-Mark-all-sessions-as-invalid-in-cb_remo.patch
+	patches.suse/IB-hfi1-Fix-a-memleak-in-init_credit_return.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
