--- a/series.conf
+++ b/series.conf
@@ -45141,6 +45141,7 @@
 	patches.suse/misc-fastrpc-Mark-all-sessions-as-invalid-in-cb_remo.patch
 	patches.suse/IB-hfi1-Fix-a-memleak-in-init_credit_return.patch
 	patches.suse/RDMA-bnxt_re-Return-error-for-SRQ-resize.patch
+	patches.suse/RDMA-bnxt_re-Add-a-missing-check-in-bnxt_qplib_query.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
