RDMA/irdma: Fix KASAN issue with tasklet (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -45142,6 +45142,7 @@
 	patches.suse/IB-hfi1-Fix-a-memleak-in-init_credit_return.patch
 	patches.suse/RDMA-bnxt_re-Return-error-for-SRQ-resize.patch
 	patches.suse/RDMA-bnxt_re-Add-a-missing-check-in-bnxt_qplib_query.patch
+	patches.suse/RDMA-irdma-Fix-KASAN-issue-with-tasklet.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
