RDMA/irdma: Set the CQ read threshold for GEN 1 (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -45144,6 +45144,7 @@
 	patches.suse/RDMA-bnxt_re-Add-a-missing-check-in-bnxt_qplib_query.patch
 	patches.suse/RDMA-irdma-Fix-KASAN-issue-with-tasklet.patch
 	patches.suse/RDMA-irdma-Validate-max_send_wr-and-max_recv_wr.patch
+	patches.suse/RDMA-irdma-Set-the-CQ-read-threshold-for-GEN-1.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
