RDMA/irdma: Add AE for too many RNRS (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -45145,6 +45145,7 @@
 	patches.suse/RDMA-irdma-Fix-KASAN-issue-with-tasklet.patch
 	patches.suse/RDMA-irdma-Validate-max_send_wr-and-max_recv_wr.patch
 	patches.suse/RDMA-irdma-Set-the-CQ-read-threshold-for-GEN-1.patch
+	patches.suse/RDMA-irdma-Add-AE-for-too-many-RNRS.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
