--- a/series.conf
+++ b/series.conf
@@ -45146,6 +45146,7 @@
 	patches.suse/RDMA-irdma-Validate-max_send_wr-and-max_recv_wr.patch
 	patches.suse/RDMA-irdma-Set-the-CQ-read-threshold-for-GEN-1.patch
 	patches.suse/RDMA-irdma-Add-AE-for-too-many-RNRS.patch
+	patches.suse/IB-hfi1-Fix-sdma.h-tx-num_descs-off-by-one-error.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
