--- a/series.conf
+++ b/series.conf
@@ -45147,6 +45147,7 @@
 	patches.suse/RDMA-irdma-Set-the-CQ-read-threshold-for-GEN-1.patch
 	patches.suse/RDMA-irdma-Add-AE-for-too-many-RNRS.patch
 	patches.suse/IB-hfi1-Fix-sdma.h-tx-num_descs-off-by-one-error.patch
+	patches.suse/RDMA-srpt-Support-specifying-the-srpt_service_guid-p.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
