RDMA/srpt: fix function pointer cast warnings (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -45149,6 +45149,7 @@
 	patches.suse/IB-hfi1-Fix-sdma.h-tx-num_descs-off-by-one-error.patch
 	patches.suse/RDMA-srpt-Support-specifying-the-srpt_service_guid-p.patch
 	patches.suse/RDMA-qedr-Fix-qedr_create_user_qp-error-flow.patch
+	patches.suse/RDMA-srpt-fix-function-pointer-cast-warnings.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
