--- a/series.conf
+++ b/series.conf
@@ -16937,6 +16937,7 @@
 	patches.suse/0004-mm-page_owner-Implement-the-tracking-of-the-stacks-c.patch
 	patches.suse/0005-mm-page_owner-Display-all-stacks-and-their-count.patch
 	patches.suse/0006-mm-page_owner-Filter-out-stacks-by-a-threshold.patch
+	patches.suse/0007-mm-page_owner-Update-Documentation-regarding-page_ow.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
