RDMA/bnxt_re: Avoid creating fence MR for newer adapters (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -16841,6 +16841,7 @@
 	patches.suse/modpost-trim-leading-spaces-when-processing-source-f.patch
 	patches.suse/kallsyms-ignore-ARMv4-thunks-along-with-others.patch
 	patches.suse/IB-hfi1-Fix-a-memleak-in-init_credit_return.patch
+	patches.suse/RDMA-bnxt_re-Avoid-creating-fence-MR-for-newer-adapt.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
