--- a/series.conf
+++ b/series.conf
@@ -16843,6 +16843,7 @@
 	patches.suse/IB-hfi1-Fix-a-memleak-in-init_credit_return.patch
 	patches.suse/RDMA-bnxt_re-Avoid-creating-fence-MR-for-newer-adapt.patch
 	patches.suse/RDMA-bnxt_re-Remove-a-redundant-check-inside-bnxt_re.patch
+	patches.suse/RDMA-bnxt_re-Fix-unconditional-fence-for-newer-adapt.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
