RDMA/bnxt_re: Return error for SRQ resize (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -16844,6 +16844,7 @@
 	patches.suse/RDMA-bnxt_re-Avoid-creating-fence-MR-for-newer-adapt.patch
 	patches.suse/RDMA-bnxt_re-Remove-a-redundant-check-inside-bnxt_re.patch
 	patches.suse/RDMA-bnxt_re-Fix-unconditional-fence-for-newer-adapt.patch
+	patches.suse/RDMA-bnxt_re-Return-error-for-SRQ-resize.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
