--- a/series.conf
+++ b/series.conf
@@ -16845,6 +16845,7 @@
 	patches.suse/RDMA-bnxt_re-Remove-a-redundant-check-inside-bnxt_re.patch
 	patches.suse/RDMA-bnxt_re-Fix-unconditional-fence-for-newer-adapt.patch
 	patches.suse/RDMA-bnxt_re-Return-error-for-SRQ-resize.patch
+	patches.suse/RDMA-bnxt_re-Add-a-missing-check-in-bnxt_qplib_query.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
