IB/mlx5: Don't expose debugfs entries for RRoCE general parameters if not supported (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -16846,6 +16846,7 @@
 	patches.suse/RDMA-bnxt_re-Fix-unconditional-fence-for-newer-adapt.patch
 	patches.suse/RDMA-bnxt_re-Return-error-for-SRQ-resize.patch
 	patches.suse/RDMA-bnxt_re-Add-a-missing-check-in-bnxt_qplib_query.patch
+	patches.suse/IB-mlx5-Don-t-expose-debugfs-entries-for-RRoCE-gener.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
