--- a/series.conf
+++ b/series.conf
@@ -16847,6 +16847,7 @@
 	patches.suse/RDMA-bnxt_re-Return-error-for-SRQ-resize.patch
 	patches.suse/RDMA-bnxt_re-Add-a-missing-check-in-bnxt_qplib_query.patch
 	patches.suse/IB-mlx5-Don-t-expose-debugfs-entries-for-RRoCE-gener.patch
+	patches.suse/RDMA-irdma-Fix-KASAN-issue-with-tasklet.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
