--- a/series.conf
+++ b/series.conf
@@ -16848,6 +16848,7 @@
 	patches.suse/RDMA-bnxt_re-Add-a-missing-check-in-bnxt_qplib_query.patch
 	patches.suse/IB-mlx5-Don-t-expose-debugfs-entries-for-RRoCE-gener.patch
 	patches.suse/RDMA-irdma-Fix-KASAN-issue-with-tasklet.patch
+	patches.suse/RDMA-irdma-Validate-max_send_wr-and-max_recv_wr.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
