RDMA/irdma: Set the CQ read threshold for GEN 1 (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -16849,6 +16849,7 @@
 	patches.suse/IB-mlx5-Don-t-expose-debugfs-entries-for-RRoCE-gener.patch
 	patches.suse/RDMA-irdma-Fix-KASAN-issue-with-tasklet.patch
 	patches.suse/RDMA-irdma-Validate-max_send_wr-and-max_recv_wr.patch
+	patches.suse/RDMA-irdma-Set-the-CQ-read-threshold-for-GEN-1.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
