--- a/series.conf
+++ b/series.conf
@@ -16851,6 +16851,7 @@
 	patches.suse/RDMA-irdma-Validate-max_send_wr-and-max_recv_wr.patch
 	patches.suse/RDMA-irdma-Set-the-CQ-read-threshold-for-GEN-1.patch
 	patches.suse/RDMA-irdma-Add-AE-for-too-many-RNRS.patch
+	patches.suse/IB-hfi1-Fix-sdma.h-tx-num_descs-off-by-one-error.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
