--- a/series.conf
+++ b/series.conf
@@ -16852,6 +16852,7 @@
 	patches.suse/RDMA-irdma-Set-the-CQ-read-threshold-for-GEN-1.patch
 	patches.suse/RDMA-irdma-Add-AE-for-too-many-RNRS.patch
 	patches.suse/IB-hfi1-Fix-sdma.h-tx-num_descs-off-by-one-error.patch
+	patches.suse/RDMA-srpt-Support-specifying-the-srpt_service_guid-p.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
