RDMA/srpt: fix function pointer cast warnings (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -16854,6 +16854,7 @@
 	patches.suse/IB-hfi1-Fix-sdma.h-tx-num_descs-off-by-one-error.patch
 	patches.suse/RDMA-srpt-Support-specifying-the-srpt_service_guid-p.patch
 	patches.suse/RDMA-qedr-Fix-qedr_create_user_qp-error-flow.patch
+	patches.suse/RDMA-srpt-fix-function-pointer-cast-warnings.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
