lib/stackdepot: add depot_fetch_stack helper (jsc-PED#7423).

--- a/series.conf
+++ b/series.conf
@@ -44865,6 +44865,7 @@
 	patches.suse/perf-x86-uncore-Use-u64-to-replace-unsigned-for-the-.patch
 	patches.suse/perf-x86-intel-uncore-Fix-NULL-pointer-dereference-issue-in-upi_fill_topology.patch
 	patches.suse/perf-x86-intel-uncore-Factor-out-topology_gidnid_map.patch
+	patches.suse/0001-lib-stackdepot-add-depot_fetch_stack-helper.patch
 	patches.suse/usb-fsl-mph-dr-of-mark-fsl_usb2_mpc5121_init-static.patch
 	patches.suse/usr-Kconfig-fix-typos-of-its.patch
 	patches.suse/spi-spi-zynqmp-gqspi-fix-driver-kconfig-dependencies.patch
