sched/membarrier: reduce the ability to hammer on sys_membarrier (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -1563,6 +1563,7 @@
 	patches.suse/btrfs-add-new-unused-block-groups-to-the-list-of-unu.patch
 	patches.suse/btrfs-don-t-refill-whole-delayed-refs-block-reserve-.patch
 	patches.suse/af_unix-Fix-task-hung-while-purging-oob_skb-in-GC.patch
+	patches.suse/sched-membarrier-reduce-the-ability-to-hammer-on-sys.patch
 
 	########################################################
 	# end of sorted patches
