--- a/series.conf
+++ b/series.conf
@@ -45273,6 +45273,7 @@
 	patches.suse/Bluetooth-hci_ldisc-check-HCI_UART_PROTO_READY-flag-.patch
 	patches.suse/ALSA-hda-Disable-power-save-on-KONTRON-SinglePC.patch
 	patches.suse/wifi-brcmfmac-Fix-use-after-free-bug-in-brcmf_cfg802.patch
+	patches.suse/0001-lib-stackdepot-Fix-first-entry-having-a-0-handle.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
