--- a/series.conf
+++ b/series.conf
@@ -45274,6 +45274,7 @@
 	patches.suse/ALSA-hda-Disable-power-save-on-KONTRON-SinglePC.patch
 	patches.suse/wifi-brcmfmac-Fix-use-after-free-bug-in-brcmf_cfg802.patch
 	patches.suse/0001-lib-stackdepot-Fix-first-entry-having-a-0-handle.patch
+	patches.suse/0002-lib-stackdepot-Move-stack_record-struct-definition-i.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
