x86/xen: add CPU dependencies for 32-bit build (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15089,6 +15089,7 @@
 	patches.suse/drm-i915-Reject-async-flips-with-bigjoiner.patch
 	patches.suse/drm-i915-mtl-Fix-HDMI-DP-PLL-clock-selection.patch
 	patches.suse/drm-i915-dmc-Don-t-enable-any-pipe-DMC-events.patch
+	patches.suse/x86-xen-add-CPU-dependencies-for-32-bit-build.patch
 	patches.suse/gpiolib-cdev-add-gpio_device-locking-wrapper-around-.patch
 	patches.suse/gpio-dwapb-mask-unmask-IRQ-when-disable-enale-it.patch
 	patches.suse/i2c-qcom-geni-fix-missing-clk_disable_unprepare-and-.patch
