--- a/series.conf
+++ b/series.conf
@@ -45275,6 +45275,7 @@
 	patches.suse/wifi-brcmfmac-Fix-use-after-free-bug-in-brcmf_cfg802.patch
 	patches.suse/0001-lib-stackdepot-Fix-first-entry-having-a-0-handle.patch
 	patches.suse/0002-lib-stackdepot-Move-stack_record-struct-definition-i.patch
+	patches.suse/0003-mm-page_owner-Maintain-own-list-of-stack_records-str.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
