mm,page_owner: Implement the tracking of the stacks count (jsc-PED#7423).

--- a/series.conf
+++ b/series.conf
@@ -45276,6 +45276,7 @@
 	patches.suse/0001-lib-stackdepot-Fix-first-entry-having-a-0-handle.patch
 	patches.suse/0002-lib-stackdepot-Move-stack_record-struct-definition-i.patch
 	patches.suse/0003-mm-page_owner-Maintain-own-list-of-stack_records-str.patch
+	patches.suse/0004-mm-page_owner-Implement-the-tracking-of-the-stacks-c.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
