scsi: mpi3mr: Fix printk() format strings (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15909,6 +15909,7 @@
 	patches.suse/scsi-mpi3mr-Support-for-preallocation-of-SGL-BSG-data-buffers-part-2.patch
 	patches.suse/scsi-mpi3mr-Support-for-preallocation-of-SGL-BSG-data-buffers-part-3.patch
 	patches.suse/scsi-mpi3mr-Update-driver-version-to-8.5.1.0.0.patch
+	patches.suse/scsi-mpi3mr-Fix-printk-format-strings.patch
 	patches.suse/scsi-fnic-Modify-definitions-to-sync-with-VIC-firmware.patch
 	patches.suse/scsi-fnic-Add-and-use-fnic-number.patch
 	patches.suse/scsi-fnic-Add-and-improve-log-messages.patch
