--- a/series.conf
+++ b/series.conf
@@ -14431,6 +14431,7 @@
 	patches.suse/xfs-inode-recovery-does-not-validate-the-recovered-inode.patch
 	patches.suse/xfs-recovery-should-not-clear-di_flushiter-unconditionally.patch
 	patches.suse/scsi-qla2xxx-Fix-system-crash-due-to-bad-pointer-access.patch
+	patches.suse/scsi-sd-Fix-sshdr-use-in-sd_suspend_common.patch
 	patches.suse/perf-core-Fix-cpuctx-refcounting.patch
 	patches.suse/sched-psi-fix-unprivileged-polling-against-cgroups.patch
 	patches.suse/sched-fair-Fix-the-decision-for-load-balance.patch
