scsi: libfc: Fix potential NULL pointer dereference in fc_lport_ptp_setup() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13434,6 +13434,7 @@
 	patches.suse/scsi-ibmvfc-Remove-BUG_ON-in-the-case-of-an-empty-ev.patch
 	patches.suse/scsi-ibmvfc-Implement-channel-queue-depth-and-event-.patch
 	patches.suse/scsi-ibmvfc-Fix-erroneous-use-of-rtas_busy_delay-with-hcall-return-code.patch
+	patches.suse/scsi-libfc-Fix-potential-NULL-pointer-dereference-in-fc_lport_ptp_setup.patch
 	patches.suse/scsi-megaraid-Pass-in-NULL-scb-for-host-reset.patch
 	patches.suse/scsi-mpi3mr-Split-off-bus_reset-function-from-host_reset.patch
 	patches.suse/scsi-megaraid_sas-Increase-register-read-retry-rount.patch
