--- a/series.conf
+++ b/series.conf
@@ -15899,6 +15899,7 @@
 	patches.suse/scsi-mpi3mr-driver-version-upgrade-to-8.5.0.0.50.patch
 	patches.suse/scsi-arcmsr-Support-new-PCI-device-IDs-1883-and-1886.patch
 	patches.suse/scsi-fnic-Return-error-if-vmalloc-failed.patch
+	patches.suse/scsi-libfc-Don-t-schedule-abort-twice.patch
 	patches.suse/scsi-mpi3mr-Refresh-sdev-queue-depth-after-controller-reset.patch
 	patches.suse/scsi-mpi3mr-Clean-up-block-devices-post-controller-reset.patch
 	patches.suse/scsi-mpi3mr-Block-PEL-Enable-Command-on-Controller-Reset-and-Unrecoverable-State.patch
