--- a/series.conf
+++ b/series.conf
@@ -15897,6 +15897,7 @@
 	patches.suse/scsi-mpi3mr-Increase-maximum-number-of-PHYs-to-64-from-32.patch
 	patches.suse/scsi-mpi3mr-Add-support-for-status-reply-descriptor.patch
 	patches.suse/scsi-mpi3mr-driver-version-upgrade-to-8.5.0.0.50.patch
+	patches.suse/scsi-arcmsr-Support-new-PCI-device-IDs-1883-and-1886.patch
 	patches.suse/scsi-mpi3mr-Refresh-sdev-queue-depth-after-controller-reset.patch
 	patches.suse/scsi-mpi3mr-Clean-up-block-devices-post-controller-reset.patch
 	patches.suse/scsi-mpi3mr-Block-PEL-Enable-Command-on-Controller-Reset-and-Unrecoverable-State.patch
