scsi: hisi_sas: Set .phy_attached before notifing phyup event HISI_PHYE_PHY_UP_PM (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15927,6 +15927,7 @@
 	patches.suse/scsi-lpfc-Reinitialize-an-NPIV-s-VMID-data-structure.patch
 	patches.suse/scsi-lpfc-Move-determination-of-vmid_flag-after-VMID.patch
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.2.0.17.patch
+	patches.suse/scsi-hisi_sas-Set-.phy_attached-before-notifing-phyup-event-HISI_PHYE_PHY_UP_PM.patch
 	patches.suse/scripts-kernel-doc-restore-warning-for-Excess-struct.patch
 	patches.suse/scripts-get_abi-fix-source-path-leak.patch
 	patches.suse/docs-kernel_abi.py-fix-command-injection.patch
