KVM: x86: work around QEMU issue with synthetic CPUID leaves (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56397,6 +56397,7 @@
 	patches.suse/iio-magnetometer-ak8975-Fix-the-error-handling-in-ak.patch
 	patches.suse/iio-dac-ad5446-Fix-read_raw-not-returning-set-value.patch
 	patches.suse/objtool-Fix-type-of-reloc-addend.patch
+	patches.suse/KVM-x86-work-around-QEMU-issue-with-synthetic-CPUID-leaves.patch
 	patches.suse/hwmon-f71882fg-Fix-negative-temperature.patch
 	patches.suse/iommu-vt-d-Calculate-mask-for-non-aligned-flushes
 	patches.suse/can-grcan-grcan_close-fix-deadlock.patch
