tun: fix missing dropped counter in tun_xdp_act (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16565,6 +16565,7 @@
 	patches.suse/bnxt_en-Prevent-kernel-warning-when-running-offline-.patch
 	patches.suse/bnxt_en-Fix-possible-crash-after-creating-sw-mqprio-.patch
 	patches.suse/idpf-distinguish-vports-by-the-dev_port-attribute.patch
+	patches.suse/tun-fix-missing-dropped-counter-in-tun_xdp_act.patch
 	patches.suse/dpll-fix-broken-error-path-in-dpll_pin_alloc.patch
 	patches.suse/dpll-fix-pin-dump-crash-for-rebound-module.patch
 	patches.suse/dpll-fix-userspace-availability-of-pins.patch
