netfilter: nft_set_rbtree: skip sync GC for new elements in this transaction (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10899,6 +10899,7 @@
 	patches.suse/net-hns3-remove-GSO-partial-feature-bit.patch
 	patches.suse/netfilter-nftables-exthdr-fix-4-byte-stack-OOB-write.patch
 	patches.suse/0001-netfilter-nfnetlink_osf-avoid-OOB-read.patch
+	patches.suse/netfilter-nft_set_rbtree-skip-sync-GC-for-new-elemen.patch
 	patches.suse/netfilter-ipset-add-the-missing-IP_SET_HASH_WITH_NET.patch
 	patches.suse/net-enetc-distinguish-error-from-valid-pointers-in-e.patch
 	patches.suse/accel-ivpu-refactor-deprecated-strncpy.patch
