--- a/series.conf
+++ b/series.conf
@@ -11714,6 +11714,7 @@
 	patches.suse/page_pool-fix-documentation-typos.patch
 	patches.suse/selftests-netfilter-test-for-sctp-collision-processi.patch
 	patches.suse/selftests-netfilter-Extend-nft_audit.sh.patch
+	patches.suse/netfilter-nf_tables-nft_set_rbtree-fix-spurious-inse.patch
 	patches.suse/msft-hv-2888-net-mana-Fix-TX-CQE-error-handling.patch
 	patches.suse/msft-hv-2889-net-mana-Fix-the-tso_bytes-calculation.patch
 	patches.suse/msft-hv-2890-net-mana-Fix-oversized-sge0-for-GSO-packets.patch
