--- a/blacklist.conf
+++ b/blacklist.conf
@@ -819,3 +819,4 @@ d81304bc6193554014d4372a01debdf65e1e9a4d #  CONFIG_UCLAMP_TASK is not set
 1147dd0503564fa0e03489a039f9e0c748a03db4 # nvme io_uring passthru is disabled
 c2dffda1d8f7511505bbbf16ba282f2079b30089 # CONFIG_NET is always set
 2b9c3eb32a699acdd4784d6b93743271b4970899 # input/mouse/bcm5974: causes a regression on MacBook touchpad alone (bsc#1220030)
+a3afbf5cc887fc3401f012fe629810998ed61859 # usb/gadget/udc/core: later reverted
