USB: gadget: core: adjust uevent timing on gadget unbind (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -44706,6 +44706,7 @@
 	patches.suse/serial-8250-8250_omap-Clear-UART_HAS_RHR_IT_DIS-bit.patch
 	patches.suse/serial-sc16is7xx-address-RX-timeout-interrupt-errata.patch
 	patches.suse/ARM-PL011-Fix-DMA-support.patch
+	patches.suse/USB-gadget-core-adjust-uevent-timing-on-gadget-unbin.patch
 	patches.suse/usb-typec-class-fix-typec_altmode_put_partner-to-put.patch
 	patches.suse/Revert-xhci-Loosen-RPM-as-default-policy-to-cover-fo.patch
 	patches.suse/usb-gadget-f_hid-fix-report-descriptor-allocation.patch
