Rename and refresh patches.suse/cpufreq-ondemand-Set-default-up_threshold-to-30-on-multi-core-systems.patch.

--- a/series.conf
+++ b/series.conf
@@ -16995,7 +16995,7 @@
 	patches.suse/Revert-cpufreq-Avoid-configuring-old-governors-as-de.patch
 
 	# Needs re-evaluation. See notes in changelog for history on what needs to be done
-+mgorman	patches.suse/cpufreq-ondemand-set-default-up_threshold-to-30-on-multi-core-systems.patch
+	patches.suse/cpufreq-ondemand-Set-default-up_threshold-to-30-on-multi-core-systems.patch
 
 	# Patches of historical interest temporarily preserved in case a
 	# relevant bug hits the areas of interest
