--- a/series.conf
+++ b/series.conf
@@ -16777,6 +16777,7 @@
 	patches.suse/PCI-dwc-Fix-a-64bit-bug-in-dw_pcie_ep_raise_msix_irq.patch
 	patches.suse/tracing-probes-Fix-to-show-a-parse-error-for-bad-type-for-comm.patch
 	patches.suse/ftrace-Fix-DIRECT_CALLS-to-use-SAVE_REGS-by-default.patch
+	patches.suse/tracing-Fix-wasted-memory-in-saved_cmdlines-logic.patch
 	patches.suse/scsi-lpfc-Use-unsigned-type-for-num_sge.patch
 	patches.suse/nvme-host-fix-the-updating-of-the-firmware-version.patch
 	patches.suse/x86-Kconfig-Transmeta-Crusoe-is-CPU-family-5-not-6.patch
