--- a/series.conf
+++ b/series.conf
@@ -16655,6 +16655,7 @@
 	patches.suse/mm-writeback-fix-possible-divide-by-zero-in-wb_dirty_limits-again.patch
 	patches.suse/tracing-trigger-Fix-to-return-error-if-failed-to-alloc-snapshot.patch
 	patches.suse/scsi-isci-Fix-an-error-code-problem-in-isci_io_request_build.patch
+	patches.suse/scsi-core-Move-scsi_host_busy-out-of-host-lock-for-waking-up-EH-handler.patch
 	patches.suse/msft-hv-2939-scsi-storvsc-Fix-ring-buffer-size-calculation.patch
 	patches.suse/regulator-ti-abb-don-t-use-devm_platform_ioremap_res.patch
 	patches.suse/firewire-core-correct-documentation-of-fw_csr_string.patch
