--- a/series.conf
+++ b/series.conf
@@ -15931,6 +15931,7 @@
 	patches.suse/scsi-hisi_sas-Replace-with-standard-error-code-return-value.patch
 	patches.suse/scsi-hisi_sas-Check-before-using-pointer-variables.patch
 	patches.suse/scsi-hisi_sas-Rollback-some-operations-if-FLR-failed.patch
+	patches.suse/scsi-hisi_sas-Correct-the-number-of-global-debugfs-registers.patch
 	patches.suse/scripts-kernel-doc-restore-warning-for-Excess-struct.patch
 	patches.suse/scripts-get_abi-fix-source-path-leak.patch
 	patches.suse/docs-kernel_abi.py-fix-command-injection.patch
