scsi: hisi_sas: Rollback some operations if FLR failed (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15930,6 +15930,7 @@
 	patches.suse/scsi-hisi_sas-Set-.phy_attached-before-notifing-phyup-event-HISI_PHYE_PHY_UP_PM.patch
 	patches.suse/scsi-hisi_sas-Replace-with-standard-error-code-return-value.patch
 	patches.suse/scsi-hisi_sas-Check-before-using-pointer-variables.patch
+	patches.suse/scsi-hisi_sas-Rollback-some-operations-if-FLR-failed.patch
 	patches.suse/scripts-kernel-doc-restore-warning-for-Excess-struct.patch
 	patches.suse/scripts-get_abi-fix-source-path-leak.patch
 	patches.suse/docs-kernel_abi.py-fix-command-injection.patch
