uio_dmem_genirq: UIO_MEM_DMA_COHERENT conversion (bsc#1217698).

--- a/series.conf
+++ b/series.conf
@@ -16924,6 +16924,7 @@
 	patches.suse/uio-introduce-uio_mem_dma_coherent-type.patch
 	patches.suse/cnic-bnx2-bnx2x-use-uio_mem_dma_coherent.patch
 	patches.suse/uio_pruss-uio_mem_dma_coherent-conversion.patch
+	patches.suse/uio_dmem_genirq-uio_mem_dma_coherent-conversion.patch
 
 
 
