uio_pruss: UIO_MEM_DMA_COHERENT conversion (bsc#1217698).

--- a/series.conf
+++ b/series.conf
@@ -16923,6 +16923,7 @@
 	patches.suse/block-sed-opal-handle-empty-atoms-when-parsing-respo.patch
 	patches.suse/uio-introduce-uio_mem_dma_coherent-type.patch
 	patches.suse/cnic-bnx2-bnx2x-use-uio_mem_dma_coherent.patch
+	patches.suse/uio_pruss-uio_mem_dma_coherent-conversion.patch
 
 
 
