--- a/series.conf
+++ b/series.conf
@@ -16921,6 +16921,7 @@
 
 	# out-of-tree patches
 	patches.suse/block-sed-opal-handle-empty-atoms-when-parsing-respo.patch
+	patches.suse/uio-introduce-uio_mem_dma_coherent-type.patch
 
 
 
