mm, mmap: fix vma_merge() case 7 with vma_ops->close (bsc#1217313).

--- a/series.conf
+++ b/series.conf
@@ -16468,6 +16468,7 @@
 	patches.suse/wifi-brcmfmac-Fix-use-after-free-bug-in-brcmf_cfg802.patch
 	patches.suse/r8169-add-support-for-RTL8126A.patch
 	patches.suse/net-phy-realtek-add-support-for-RTL8126A-integrated-.patch
+	patches.suse/mm-mmap-fix-vma_merge-case-7.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
