scsi: core: Move scsi_host_busy() out of host lock if it is for per-command (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16791,6 +16791,7 @@
 	patches.suse/hwmon-coretemp-Fix-out-of-bounds-memory-access.patch
 	patches.suse/hwmon-coretemp-Fix-bogus-core_id-to-attr-name-mappin.patch
 	patches.suse/PCI-dwc-Fix-a-64bit-bug-in-dw_pcie_ep_raise_msix_irq.patch
+	patches.suse/scsi-core-Move-scsi_host_busy-out-of-host-lock-if-it-is-for-per-command.patch
 	patches.suse/scsi-lpfc-Use-unsigned-type-for-num_sge.patch
 	patches.suse/nvme-host-fix-the-updating-of-the-firmware-version.patch
 	patches.suse/x86-Kconfig-Transmeta-Crusoe-is-CPU-family-5-not-6.patch
