--- a/series.conf
+++ b/series.conf
@@ -3721,6 +3721,7 @@
 	patches.kernel.org/6.6.18-017-drm-msm-gem-Fix-double-resv-lock-aquire.patch
 	patches.kernel.org/6.6.18-018-spi-imx-fix-the-burst-length-at-DMA-mode-and-C.patch
 	patches.kernel.org/6.6.18-019-KVM-selftests-Fix-a-semaphore-imbalance-in-the.patch
+	patches.kernel.org/6.6.18-020-wifi-iwlwifi-Fix-some-error-codes.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
