--- a/series.conf
+++ b/series.conf
@@ -3940,6 +3940,7 @@
 	patches.kernel.org/6.6.18-236-net-stmmac-protect-updates-of-64-bit-statistic.patch
 	patches.kernel.org/6.6.18-237-hv_netvsc-Register-VF-in-netvsc_probe-if-NET_D.patch
 	patches.kernel.org/6.6.18-238-ceph-prevent-use-after-free-in-encode_cap_msg.patch
+	patches.kernel.org/6.6.18-239-fs-hugetlb-fix-NULL-pointer-dereference-in-hug.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
