serial: max310x: prevent infinite while() loop in port startup (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3882,6 +3882,7 @@
 	patches.kernel.org/6.6.18-178-serial-max310x-set-default-value-when-reading-.patch
 	patches.kernel.org/6.6.18-179-serial-max310x-improve-crystal-stable-clock-de.patch
 	patches.kernel.org/6.6.18-180-serial-max310x-fail-probe-if-clock-crystal-is-.patch
+	patches.kernel.org/6.6.18-181-serial-max310x-prevent-infinite-while-loop-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
