--- a/series.conf
+++ b/series.conf
@@ -3794,6 +3794,7 @@
 	patches.kernel.org/6.6.18-090-powerpc-kasan-Fix-addr-error-caused-by-page-al.patch
 	patches.kernel.org/6.6.18-091-Revert-kobject-Remove-redundant-checks-for-whe.patch
 	patches.kernel.org/6.6.18-092-PCI-Fix-active-state-requirement-in-PME-pollin.patch
+	patches.kernel.org/6.6.18-093-iio-adc-ad4130-zero-initialize-clock-init-data.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
