eventfs: Read ei->entries before ei->children in eventfs_iterate() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3997,6 +3997,7 @@
 	patches.kernel.org/6.6.18-293-tracefs-eventfs-Use-root-and-instance-inodes-a.patch
 	patches.kernel.org/6.6.18-294-eventfs-Have-eventfs_iterate-stop-immediately-.patch
 	patches.kernel.org/6.6.18-295-eventfs-Do-ctx-pos-update-for-all-iterations-i.patch
+	patches.kernel.org/6.6.18-296-eventfs-Read-ei-entries-before-ei-children-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
