--- a/series.conf
+++ b/series.conf
@@ -3922,6 +3922,7 @@
 	patches.kernel.org/6.6.18-218-arm64-signal-Don-t-assume-that-TIF_SVE-means-w.patch
 	patches.kernel.org/6.6.18-219-arm64-Subscribe-Microsoft-Azure-Cobalt-100-to-.patch
 	patches.kernel.org/6.6.18-220-ASoC-SOF-IPC3-fix-message-bounds-on-ipc-ops.patch
+	patches.kernel.org/6.6.18-221-ASoC-tas2781-add-module-parameter-to-tascodec_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
