pmdomain: renesas: r8a77980-sysc: CR7 must be always on (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3936,6 +3936,7 @@
 	patches.kernel.org/6.6.18-232-net-ethernet-ti-cpsw-enable-mac_managed_pm-to-.patch
 	patches.kernel.org/6.6.18-233-s390-qeth-Fix-potential-loss-of-L3-IP-in-case-.patch
 	patches.kernel.org/6.6.18-234-net-ethernet-ti-cpsw_new-enable-mac_managed_pm.patch
+	patches.kernel.org/6.6.18-235-pmdomain-renesas-r8a77980-sysc-CR7-must-be-alw.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
