interconnect: qcom: sc8180x: Mark CO0 BCM keepalive (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3785,6 +3785,7 @@
 	patches.kernel.org/6.6.18-081-usb-chipidea-core-handle-power-lost-in-workque.patch
 	patches.kernel.org/6.6.18-082-usb-core-Prevent-null-pointer-dereference-in-u.patch
 	patches.kernel.org/6.6.18-083-usb-dwc3-gadget-Fix-NULL-pointer-dereference-i.patch
+	patches.kernel.org/6.6.18-084-interconnect-qcom-sc8180x-Mark-CO0-BCM-keepali.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
