selftests/landlock: Fix fs_test build with old libc (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3714,6 +3714,7 @@
 	patches.kernel.org/6.6.18-010-btrfs-reject-encoded-write-if-inode-has-nodata.patch
 	patches.kernel.org/6.6.18-011-btrfs-don-t-drop-extent_map-for-free-space-ino.patch
 	patches.kernel.org/6.6.18-012-driver-core-Fix-device_link_flag_is_sync_state.patch
+	patches.kernel.org/6.6.18-013-selftests-landlock-Fix-fs_test-build-with-old-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
