work around gcc bugs with 'asm goto' with outputs (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3702,6 +3702,7 @@
 	patches.kernel.org/6.6.17-125-netfilter-nft_set_rbtree-skip-end-interval-ele.patch
 	patches.kernel.org/6.6.17-126-Linux-6.6.17.patch
 	patches.kernel.org/af_unix-Fix-task-hung-while-purging-oob_skb-in-GC.patch
+	patches.kernel.org/6.6.18-001-work-around-gcc-bugs-with-asm-goto-with-output.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
