--- a/series.conf
+++ b/series.conf
@@ -3933,6 +3933,7 @@
 	patches.kernel.org/6.6.18-229-tools-rtla-Fix-uninitialized-bucket-data-bucke.patch
 	patches.kernel.org/6.6.18-230-tools-rtla-Fix-Makefile-compiler-options-for-c.patch
 	patches.kernel.org/6.6.18-231-fs-relax-mount_setattr-permission-checks.patch
+	patches.kernel.org/6.6.18-232-net-ethernet-ti-cpsw-enable-mac_managed_pm-to-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
