--- a/series.conf
+++ b/series.conf
@@ -4031,6 +4031,7 @@
 	patches.kernel.org/6.6.18-327-x86-boot-Drop-PE-COFF-.reloc-section.patch
 	patches.kernel.org/6.6.18-328-x86-boot-Split-off-PE-COFF-.data-section.patch
 	patches.kernel.org/6.6.18-329-x86-boot-Increase-section-and-file-alignment-t.patch
+	patches.kernel.org/6.6.18-330-x86-efistub-Use-1-1-file-memory-mapping-for-PE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
