--- a/series.conf
+++ b/series.conf
@@ -3812,6 +3812,7 @@
 	patches.kernel.org/6.6.18-108-selftests-mptcp-increase-timeout-to-30-min.patch
 	patches.kernel.org/6.6.18-109-selftests-mptcp-allow-changing-subtests-prefix.patch
 	patches.kernel.org/6.6.18-110-selftests-mptcp-add-mptcp_lib_kill_wait.patch
+	patches.kernel.org/6.6.18-111-mptcp-drop-the-push_pending-field.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
