tools/rtla: Exit with EXIT_SUCCESS when help is invoked (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3929,6 +3929,7 @@
 	patches.kernel.org/6.6.18-225-tools-rtla-Remove-unused-sched_getattr-functio.patch
 	patches.kernel.org/6.6.18-226-tools-rtla-Replace-setting-prio-with-nice-for-.patch
 	patches.kernel.org/6.6.18-227-tools-rtla-Fix-clang-warning-about-mount_point.patch
+	patches.kernel.org/6.6.18-228-tools-rtla-Exit-with-EXIT_SUCCESS-when-help-is.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
